gcc/testsuite/g++.dg/gomp/sections-4.C
/* PR c++/24613 */
/* { dg-compile } */

#pragma omp section	/* { dg-error "may only be used in" } */

int i;

void
foo (void)
{
  #pragma omp section	/* { dg-error "may only be used in" } */
    i++;
}
